Fixes to settings buttons spacing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,3 +49,7 @@
   width: 100%;
   height: 100vh;
 }
+
+.RightBoxItem{
+  flex-basis:50%
+}
